# behavioral-predictor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements-data.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  events.py  health.py  models.py  predictions.py  training.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  observability.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/db/repositories/: event_repository.py  feature_repository.py  model_repository.py  prediction_repository.py  user_repository.py
backend/app/ml/compression/: __init__.py  exporter.py  pruner.py  quantizer.py
backend/app/ml/feature_engineering/: feature_builder.py  label_generator.py  vocabulary.py
backend/app/ml/inference/: __init__.py  predictor.py
backend/app/ml/training/: dataset.py  evaluator.py  model.py  rl_feedback.py  trainer.py
backend/app/schemas/: event.py  health.py  model.py  prediction.py  user.py
backend/app/services/: event_service.py  feature_service.py  prediction_service.py  training_service.py
backend/app/streaming/: __init__.py  kafka_producer.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: feature_task.py  training_task.py
backend/models/: behavioral_predictor.pt
backend/scripts/: generate_features.py  load_parquet_to_db.py  spark_etl_pipeline.py  train_model.py
backend/tests/: test_api.py  test_compression.py  test_dataset.py  test_feature_builder.py  test_model.py
browser_model/: behavioral_predictor.onnx  index.html
dataset/: README.md
docker/: Dockerfile  Dockerfile.worker  nginx.conf
docs/: architecture.md  evaluator_guide.md  submission_report.md
(+4 files in other folders)
